# knotools

./: .gitignore  README.md  default.nix  devenv.nix  dimensions.nix  epubthumb.nix  flake.nix  knotools.cabal  mdtopdf.nix  newcover.nix  overlay.nix  pdftc.nix  pdftc.sh  roamamer.nix  seder.nix  transcribe.nix  transcribe.sh
app/: Main.hs
booknote/: flake.nix
booknote/renameme/: renameme.cabal
booknote/renameme/app/: Main.hs
booknote/renameme/test/: Main.hs
gifs/: pdftc.cast
newcover/: knotools.cabal
newcover/app/: Main.hs
newcover/src/: Parser.hs
newcover/test/: Main.hs  TestData.hs  TestOutputFileName.hs
src/: Command.hs  PageRect.hs  Params.hs
test/: Main.hs  TestCommand.hs  TestParser.hs
transcribe/: README.md
transcribe/renameme/: README.md
videoChapter/: .gitignore  Main.hs  concept.md  devenv.nix  devenv.yaml  technical-plan.md  test-input01.json  test-input02.json  videoChapter.cabal
vttclean/: Main.hs  vttclean.cabal
