cabal-version: 3.0
name:          vttclean
version:       0.1.0.0
license:       MIT
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions: NoStarIsType

executable vttclean
  import:        warnings
  main-is:       Main.hs
  build-depends:
    , base                  ^>=4.18.2.1
    , foldl
    , optparse-applicative
    , text
    , turtle
